listings/ch07-managing-growing-projects/listing-07-05/output.txt
$ cargo build
   Compiling ristorante v0.1.0 (file:///progetti/ristorante)
error[E0603]: function `aggiungi_in_lista` is private
  --> src/lib.rs:12:31
   |
12 |     crate::sala::accoglienza::aggiungi_in_lista();
   |                               ^^^^^^^^^^^^^^^^^ private function
   |
note: the function `aggiungi_in_lista` is defined here
  --> src/lib.rs:4:9
   |
 4 |         fn aggiungi_in_lista() {}
   |         ^^^^^^^^^^^^^^^^^^^^^^

error[E0603]: function `aggiungi_in_lista` is private
  --> src/lib.rs:15:24
   |
15 |     sala::accoglienza::aggiungi_in_lista();
   |                        ^^^^^^^^^^^^^^^^^ private function
   |
note: the function `aggiungi_in_lista` is defined here
  --> src/lib.rs:4:9
   |
 4 |         fn aggiungi_in_lista() {}
   |         ^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0603`.
error: could not compile `ristorante` (lib) due to 2 previous errors
